# auto-absen

./: .gitignore  Cargo.toml  README.md  creds.env.example  encrypt.py
.cargo/: config
src/: main.rs
